[metadata]
name = heospy
author = Stephan Heuel
author-email = mail@ping13.net
maintainer = Stephan Heuel
maintainer-email = mail@ping13.net
summary = Control an HEOS player with a Python script
description-file =
    Readme.md
description-content-type = text//markdown; charset=UTF-8
home-page = https://github.com/ping13/heospy
project_urls =
    Bug Tracker = https://github.com/ping13/heospy/issues
    Source Code = https://github.com/ping13/heospy.git
requires-python = >=2.7

license = Apache
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP
keywords = api, heos, marantz, denon, audio

[files]
packages =
    heospy

[entry_points]
console_scripts =
    heos_player = heospy.heos_player:main

[bdist_wheel]
universal = 1

