[metadata]
name = heospy
version = 0.2.1
author = Stephan Heuel
author_email = mail@ping13.net
description = Control an HEOS player with a Python script
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ping13/heospy
project_urls =
    Bug Tracker = https://github.com/ping13/heospy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = api, heos, marantz, denon, audio

[options]
packages = find:
install_requires =
    six
    future

[options.entry_points]
console_scripts =
    heos_player = heospy:main


